[package]
name = "rust_station_13"
authors = ["Neko The Catgirl - Lead developer", "All github contributors"]
description = "A rustified verison of Space Station 13, built in bevy using quinnet networking"
readme = "Readme.md"
repository = "https://www.github.com/HellFireNeko/rust_station_13"
keywords = ["gamedev", "graphics", "game", "crossplatform"]
include = ["./assets"]
publish = false
version = "0.1.0"
edition = "2021"

# Configure the permitted systems
[lints.rust]
unsafe_code = "forbid"

# Configure the binary
[[bin]]
name = "rust_station_13"
test = false
bench = false

# Configure the workspace
[workspace]
resolver = "2"

# Configure the profiles
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

# Application dependencies
[dependencies.bevy]
version = "0.14.1"

[dependencies.bevy_egui]
version = "0.28.0"

[dependencies.bevy_quinnet]
version = "0.9.0"

[dependencies.chrono]
version = "0.4.38"

[dependencies.clap]
version = "4.5.13"
features = [
  "derive"
]

[dependencies.fern]
version = "0.6.2"

[dependencies.log]
version = "0.4.22"

[dependencies.serde]
version = "1.0.204"
features = [
  "derive"
]

[dependencies.serde_json]
version = "1.0.122"

[dependencies.sys-info]
version = "0.9.1"

[dependencies.toml]
version = "0.8.19"

[dependencies.ureq]
version = "2.10.1"

[dependencies.whoami]
version = "1.5.1"

# Build dependencies
[build-dependencies]
clap = { version = "4.5.13", features = ["derive"] }
clap_complete = "4.5.12"
clap_complete_fig = "4.5.2"
clap_complete_nushell = "4.5.3"
clap_mangen = "0.2.23"
walkdir = "2.5.0"

