[package]
name = "rust_station_13"
authors = ["Neko The Catgirl - Lead developer", "All github contributors"]
description = "A rustified version of Space Station 13 - This is the client / server application"
readme = "Readme.md"
repository = "https://github.com/NekoTheCatgirl/rust_station_13"
keywords = ["gamedev", "graphics", "game", "crossplatform"]
include = ["./assets"]
publish = false
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
name = "rust_station_13"
test = false
bench = false

[workspace]
resolver = "2"
members = ["rusty-engine"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[dependencies]
bevy = { version = "0.15.0" }
bevy_egui = "0.31.1"
chrono = "0.4.39"
clap = { version = "4.5.13", features = ["derive"] }
fern = "0.7.1"
log = "0.4.22"
rusty-engine = { version = "0.1.0", path = "rusty-engine" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
sys-info = "0.9.1"
ureq = "2.12.1"
whoami = "1.5.2"
walkdir = "2.5.0"
colored = "2.2.0"

[build-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.38"
clap_complete_fig = "4.5.2"
clap_complete_nushell = "4.5.4"
clap_mangen = "0.2.24"
walkdir = "2.5.0"
cc = { version = "1.2.4", features = ["parallel"] }